sidebar and login page changed

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@ height: 100vh;">
         <div class="login-panel">
             <form [formGroup]="userLoginForm" (ngSubmit)="submitLoginForm()">
                 <div class="login-form-logo">
-                    <img src="./assets/img/logo.png" alt="logo">
+                    <img src="./assets/img/reyad-dental-image.jpg" alt="logo">
                 </div>
                 <div class="login-text">
                     Login
