--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="logo">
     <a routerLink="/dashboard" class="simple-text">
-        <img class="main-logo" src="./assets/img/logo.png" />
-        <img class="side-logo" src="./assets/img/febicon.png" />
+        <img class="main-logo" src="./assets/img/cms-logo-v1.png" />
+        <img class="side-logo" src="./assets/img/sidebar-logo.jpg" />
     </a>
 </div>
 <div class="sidebar-wrapper">
