--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -56,3 +56,7 @@ mat-icon.mat-icon.notranslate.material-icons.mat-icon-no-color {
   color: #ffffffa6;
   background: #001529;
 }
+
+.main-logo {
+  margin-left: 15px;
+}
