--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -69,3 +69,7 @@ mat-form-field {
 ::ng-deep .mat-mdc-form-field-error-wrapper {
   padding: 0 !important;
 }
+
+.submit-button button {
+  height: 50px;
+}
