un used link has been removed

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -48,7 +48,7 @@ height: 100vh;">
                     </p>
                     <p class="mt-3 copyright-text">
                         Copyright &copy; {{currentYear | date: 'yyyy'}}
-                        <a href="http://infinfotech.com/">DR. REYAD DENTAL PERFECTION</a>. <br/> All rights reserved.
+                        <a routerLink="/">DR. REYAD DENTAL PERFECTION</a>. <br/> All rights reserved.
                     </p>
                 </mat-card-actions>
             </form>
