role management view fixed

--- a/src/app/modules/system-admin/create-user/create-user.component.html
+++ b/src/app/modules/system-admin/create-user/create-user.component.html
@@ -119,7 +119,7 @@
                                                 <nz-tag *ngIf="data.status=='0'" nzColor="error">Inactive</nz-tag>
                                             </td>
                                             <td class="text-center">
-                                                <button nz-button nzType="default" (click)="updateUserDialog(data)"><i
+                                                <button nz-button nzType="default" nzSize="small" (click)="updateUserDialog(data)"><i
                                                 class="fa fa-pencil me-2"></i> Edit
                                         </button>
                                             </td>
@@ -257,7 +257,7 @@
                                             {{data.created_at|date:'medium'}}
                                         </td>
                                         <td class="text-center">
-                                            <button nz-button nzType="default" (click)="viewUserInfoDialog(data)"><i
+                                            <button nz-button nzType="default" nzSize="small" (click)="viewUserInfoDialog(data)"><i
                                                 class="fa fa-pencil me-2"></i> View
                                         </button>
                                         </td>
